--- a/wilde.css
+++ b/wilde.css
@@ -27,3 +27,17 @@
 .LADYSTUTFIELD{   
     color:yellow;
 }
+.LADYHUNSTANTON{   
+    color:green;
+}
+table, th, td {
+    border: 5px solid black; 
+    width:auto;
+    border-collapse: collapse;
+    text-align: center;
+   
+  }
+  tr:nth-child(odd)
+  {
+      background-color: rgb(194, 165, 71);
+  }
