--- a/wilde.css
+++ b/wilde.css
@@ -64,3 +64,21 @@ table, th, td {
         box-shadow: 4px 4px 4px rgb(184, 26, 26);
         filter: blur(1px);
     }
+    ul.navbar-horizontal {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    ul.navbar-horizontal li {
+        float:left;
+        background: linear-gradient(110deg, rgb(129, 136, 230) 60%,rgb(68, 212, 55) 60%);
+    }
+    ul.navbar-horizontal a {
+        display:block;
+        padding:20px;
+        color: rgb(58, 221, 213);
+    }
+    ul.navbar-horizontal a:hover {
+        background-color:rgb(224, 96, 149);
+        color:rgb(180, 240, 62);
+    }
